Sort of stable... yes, I'm looking at you, POST request

--- a/whist-app/src/index.html
+++ b/whist-app/src/index.html
@@ -12,6 +12,10 @@
   <link href="https://fonts.googleapis.com/css?family=Exo:300,400,600" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <span class="spinner spinner-inverse">
+      Loading...
+    </span>
+  </app-root>
 </body>
 </html>
