POST requests are dead. That's it for today

--- a/whist-app/src/index.html
+++ b/whist-app/src/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <app-root>
-    <span class="spinner spinner-inverse">
+    <span class="loading animated infinite pulse">
       Loading...
     </span>
   </app-root>
